--- a/public_html/index.html
+++ b/public_html/index.html
@@ -36,7 +36,7 @@
                     </div>
                     </li>
                     <li><div>
-                        <a class="home submenu" href="dev.html"></a>
+                        <a class="tools submenu" href="dev.html"></a>
                         <div>Development</div>
                     </div>
                     </li>
@@ -46,7 +46,7 @@
                         </div>
                     </li>
                     <li><div>
-                            <a class="avaxhome submenu" href="download.html"></a>
+                            <a class="downloader submenu" href="download.html"></a>
                             <div>Download</div>
                         </div>
                     </li>
@@ -99,7 +99,6 @@
                             <a class="home" href="inurl.html"></a>
                             <div>inurl</div>
                         </div>
-                    </li>
                     </li>
                 </ol>
             </div>
