--- a/public_html/dev.html
+++ b/public_html/dev.html
@@ -51,7 +51,7 @@
                         </div>
                     </li>
                     <li><div>
-                            <a class="bus" href="http://zonebus:88"></a>
+                            <a class="bus" href="http://zonebus"></a>
                             <div>zonebus</div>
                         </div>
                     </li>
