info / test toegevoegd

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -100,6 +100,11 @@
                             <div>inurl</div>
                         </div>
                     </li>
+                    <li><div>
+                        <a class="info" href="phpinfo.php"></a>
+                        <div>info</div>
+                    </div>
+                    </li>
                 </ol>
             </div>
         </div>
